--- a/ansible/packages.yml
+++ b/ansible/packages.yml
@@ -1,7 +1,5 @@
 ---
-- hosts: localhost
-  connection: local
-  become: true
+- become: true
 
   tasks:
   - name: "install software-properties-common"
