--- a/ansible/packages.yml
+++ b/ansible/packages.yml
@@ -1,9 +1,5 @@
 ---
-- hosts: localhost
-  connection: local
-  become: true
-
-  tasks:
+- tasks:
   - name: "install software-properties-common"
     package:
       name: software-properties-common
