--- a/local.yml
+++ b/local.yml
@@ -3,5 +3,4 @@
   connection: local
   tasks:
   - name: packages
-    become: true
-    include_tasks: ansible/packages.yml
+    import_tasks: ansible/packages.yml
