--- a/ansible/packages.yml
+++ b/ansible/packages.yml
@@ -16,4 +16,34 @@
     - tmux
     - zsh
     - neovim
+    - git
+    - lsd
     state: latest
+- name: "change default shell"
+  become: false
+  vars:
+    current_user: "{{ ansible_user_id }}"
+  tasks:
+    - name: "chsh"
+      become: true
+      user:
+        name: "{{ current_user }}"
+        shell: /bin/zsh
+- name: "check oh-my-zsh install state"
+  become: false
+  stat:
+    path: "~/.oh-my-zsh"
+  register: omz-stat
+- name: "install oh-my-zsh"
+  become: false
+  when: not omz-stat.stat.exists
+  shell: 'sh -c "$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh)"'
+- name: "check p10k state"
+  become: false
+  stat:
+    path: "~/.p10k.zsh"
+  register: p10k-stat
+- name: "install powerlevel10k"
+  when: not p10k-stat.stat.exists
+  become: false
+  shell: 'git clone --depth=1 https://github.com/romkatv/powerlevel10k.git "${ZSH_CUSTOM:-$HOME/.oh-my-zsh/custom}/themes/powerlevel10k"'
