--- a/ansible/packages.yml
+++ b/ansible/packages.yml
@@ -36,7 +36,7 @@
 - name: "install oh-my-zsh"
   become: false
   when: not omz-stat.stat.exists
-  shell: 'sh -c "$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh)"'
+  shell: "sh -c \"$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh)\""
 - name: "check p10k state"
   become: false
   stat:
@@ -45,4 +45,4 @@
 - name: "install powerlevel10k"
   when: not p10k-stat.stat.exists
   become: false
-  shell: 'git clone --depth=1 https://github.com/romkatv/powerlevel10k.git "${ZSH_CUSTOM:-$HOME/.oh-my-zsh/custom}/themes/powerlevel10k"'
+  shell: "git clone --depth=1 https://github.com/romkatv/powerlevel10k.git \"${ZSH_CUSTOM:-$HOME/.oh-my-zsh/custom}/themes/powerlevel10k\""
