--- a/ansible/packages.yml
+++ b/ansible/packages.yml
@@ -23,6 +23,7 @@
   become: false
   set_fact:
     current_user: "{{ ansible_user_id }}"
+    user_home: "{{ lookup('env','HOME') }}"
 - name: "chsh"
   become: true
   user:
