--- a/ansible/packages.yml
+++ b/ansible/packages.yml
@@ -32,7 +32,7 @@
 - name: "check oh-my-zsh install state"
   become: false
   stat:
-    path: "~/.oh-my-zsh"
+    path: "{{ user_home }}/.oh-my-zsh"
   register: omz-stat
 - name: "install oh-my-zsh"
   become: false
