--- a/ansible/packages.yml
+++ b/ansible/packages.yml
@@ -41,7 +41,7 @@
 - name: "check p10k state"
   become: false
   stat:
-    path: "~/.p10k.zsh"
+    path: "{{ user_home }}/.oh-my-zsh/custom/themes/powerlevel10k"
   register: p10k_stat
 - name: "install powerlevel10k"
   when: not p10k_stat.stat.exists
