--- a/ansible/packages.yml
+++ b/ansible/packages.yml
@@ -77,10 +77,9 @@
       become: true
       command: install /tmp/lazygit -D -t /usr/local/bin/
 - name: "LazyVim setup"
-  when: not (ansible_stat.path_exists)
+  when: not nvim_dir_exists
   vars:
-    ansible_stat:
-      path_exists: "{{ lookup('file', '~/.config/nvim/') }}"
+    nvim_dir_exists: "{{ lookup('file', '~/.config/nvim') }}"
   block:
   - name: Clone LazyVim starter repository
     git:
