--- a/ansible/packages.yml
+++ b/ansible/packages.yml
@@ -22,6 +22,8 @@
     - git
     - lsd
     - zig
+    - ripgrep
+    - fd-find
     state: latest
 - name: "get non-root user name"
   become: false
