--- a/ansible/packages.yml
+++ b/ansible/packages.yml
@@ -67,36 +67,17 @@
     - name: Install Lazygit
       become: true
       command: install /tmp/lazygit -D -t /usr/local/bin/
-
-- name: Install Linuxbrew
-  become: false
-  shell: |
-    /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
-  args:
-    creates: /home/linuxbrew/.linuxbrew/bin/brew
-
-- name: Add Homebrew to PATH
-  become: false
-  shell: |
-    echo 'eval "$(/home/linuxbrew/.linuxbrew/bin/brew shellenv)"' >> ~/.bashrc
-    eval "$(/home/linuxbrew/.linuxbrew/bin/brew shellenv)"
-  args:
-    executable: /bin/bash
+      args:
+        creates: /usr/local/bin/lazygit
 
 - name: "Install fzf"
   become: false
-  shell: |
-    brew install fzf
-  args:
-    creates: /home/linuxbrew/.linuxbrew/bin/fzf
-  environment:
-    PATH: "/home/linuxbrew/.linuxbrew/bin:/home/linuxbrew/.linuxbrew/sbin:{{ ansible_env.PATH }}"
+  homebrew:
+    name: fzf
+    state: present
 
 - name: "Install Zig"
   become: false
-  shell: |
-    brew install zig
-  args:
-    creates: /home/linuxbrew/.linuxbrew/bin/zig
-  environment:
-    PATH: "/home/linuxbrew/.linuxbrew/bin:/home/linuxbrew/.linuxbrew/sbin:{{ ansible_env.PATH }}"
+  homebrew:
+    name: zig
+    state: present
