--- a/ansible/packages.yml
+++ b/ansible/packages.yml
@@ -36,39 +36,11 @@
 - debug:
     msg: "{{ current_user }}"
 
-- name: "Check LazyGit binary"
-  become: false
-  stat:
-    path: /usr/local/bin/lazygit
-  register: lazygit_stat
-
 - name: Install Lazygit
-  when: not lazygit_stat.stat.exists
-  block:
-    - name: Fetch Lazygit version
-      become: false
-      shell: |
-        curl -s "https://api.github.com/repos/jesseduffield/lazygit/releases/latest" | grep -Po '"tag_name": *"v\K[^"]*'
-      register: lazygit_version
-
-    - name: Download Lazygit tarball
-      become: false
-      get_url:
-        url: "https://github.com/jesseduffield/lazygit/releases/download/v{{ lazygit_version.stdout }}/lazygit_{{ lazygit_version.stdout }}_Linux_x86_64.tar.gz"
-        dest: /tmp/lazygit.tar.gz
-
-    - name: Extract Lazygit tarball
-      become: false
-      unarchive:
-        src: /tmp/lazygit.tar.gz
-        dest: /tmp/
-        remote_src: yes
-
-    - name: Install Lazygit
-      become: true
-      command: install /tmp/lazygit -D -t /usr/local/bin/
-      args:
-        creates: /usr/local/bin/lazygit
+  become: false
+  homebrew:
+    name: jesseduffield/lazygit/lazygit
+    state: present
 
 - name: "Install fzf"
   become: false
