--- a/ansible/packages.yml
+++ b/ansible/packages.yml
@@ -25,6 +25,11 @@
     - lsd
     - ripgrep
     - fd-find
+    - python3-pip
+    - python3-venv
+    - zip
+    - unzip
+    - curl
     state: latest
 
 - name: Install Lazygit
@@ -44,3 +49,9 @@
   homebrew:
     name: zig
     state: present
+
+- name: "Install SDKMan"
+  become: false
+  shell: 'curl -s "https://get.sdkman.io" | bash'
+  args:
+    creates: ~/.sdkman
